--- a/saglikpersonelitakip/web/index.xhtml
+++ b/saglikpersonelitakip/web/index.xhtml
@@ -21,7 +21,7 @@
                             <a class="nav-link mr-3" href="#">Anasayfa<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Sağlık Personelleri</a>
+                            <a class="nav-link" href="bossaatler.xhtml">Sağlık Personelleri</a>
                         </li>
                     </ul>
                 </div>
@@ -37,15 +37,18 @@
                 <div style="text-align: center;" class="col-md-12">
                     <h1 class="mb-4" style="color: #563D7C;">Program Hakkında Bilgi</h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eget posuere nibh. Mauris at ante sed nisi feugiat finibus. Phasellus aliquam ante sit amet leo pulvinar mollis. Quisque quis dolor diam. Phasellus ante erat, laoreet eget ligula eget, ornare ultricies odio. Morbi ut lobortis turpis. Nam sodales molestie felis, id condimentum urna vehicula a. Sed cursus elit augue, id mattis felis auctor bibendum. Sed viverra massa ut ornare tristique. Maecenas maximus ipsum vitae nunc convallis vestibulum. Duis mauris enim, ultricies sed lorem sed, ornare pellentesque mi. Maecenas at interdum tortor. Integer sit amet felis eget neque sollicitudin faucibus a in nibh.
-
-                        Quisque consectetur id felis vel rhoncus. Vestibulum sed ex mattis, vehicula orci eget, porta nisi. Donec congue maximus est ac iaculis. Curabitur molestie at tellus eu dapibus. Fusce sit amet ante vitae nisl tincidunt dictum ac sit amet quam. Maecenas eget enim id ex pharetra sagittis ac in tellus. Curabitur eget magna lobortis, aliquet nisi sagittis, imperdiet ipsum. Nulla facilisi. Ut id dapibus lorem, et imperdiet ipsum. Proin dignissim porttitor scelerisque. Duis sed neque dui. Fusce at nunc eget sapien porta porttitor sed ut ipsum. Suspendisse posuere sed felis id cursus.
-
-                        Donec vulputate neque quam. Sed mi lacus, vehicula sed magna ac, gravida ullamcorper nulla. Fusce eget efficitur leo, nec maximus justo. Proin eu magna non nunc vehicula pulvinar. Vivamus blandit lectus a felis eleifend placerat. Sed eget metus vulputate diam lobortis tincidunt. Donec tellus lorem, auctor ac rhoncus eu, malesuada ac elit. Donec dictum rutrum pellentesque. Etiam mi dui, lobortis vitae rhoncus et, placerat sed nibh. Cras semper varius maximus. Suspendisse et sollicitudin libero, ac malesuada nisi. Vivamus pulvinar nisl non iaculis mollis.
-
-                        Quisque justo tellus, consequat vel aliquet efficitur, euismod sed purus. Donec vulputate, est et euismod consequat, lacus nisi tempor felis, in luctus sem mi tincidunt mauris. In molestie eros nunc, in suscipit orci mattis ut. Duis cursus ipsum urna. Cras venenatis dapibus dolor sed cursus. Aenean ac tempus mauris. Nulla facilisi. Aenean sit amet suscipit sapien, sit amet imperdiet enim. Suspendisse lacus dui, vulputate a sapien a, bibendum porttitor turpis. Phasellus faucibus tincidunt magna, quis finibus nisl consectetur eget.
-
-                        Phasellus sed diam odio. Donec a ipsum ex. Fusce a finibus quam. Morbi erat elit, scelerisque eu lacinia in, porttitor eu nisl. Sed ac pretium enim, non ullamcorper eros. Morbi quis tincidunt ipsum, sit amet pulvinar nibh. Curabitur nec enim commodo, fringilla metus vitae, imperdiet ligula. Quisque quis erat consectetur, suscipit nisl vitae, fringilla felis. Suspendisse semper rhoncus diam, quis commodo tortor vestibulum auctor. Aliquam arcu nisi, hendrerit nec dignissim vitae, efficitur quis felis. Etiam a lacus efficitur, feugiat mi quis, cursus justo. Nam posuere augue in dolor maximus, at vulputate urna consectetur. Morbi euismod ut risus ac viverra. Integer egestas sapien nisl, eu vestibulum enim blandit ut. Sed eget iaculis libero.
+                        <b>Sağlık personeli takip programı </b> normal işlerine ek olarak çalışmak isteyen
+                        sağlık personelleri için oluşturulmuş bir programdır. Bu program sayesinde
+                        <a href="#" style="color: red;text-decoration: none">hemşire</a>,
+                        <a href="#" style="color: red;text-decoration: none">doktor</a>, 
+                        <a href="#" style="color: red;text-decoration: none">hasta bakıcı</a>,
+                        <a href="#" style="color: red;text-decoration: none">hasta bakıcı</a>,
+                        gibi pek çok sağlık personelinin belirledikleri zamanları
+                        tutarak ihtiyaç halindeki hastalara yönlendirebiliyoruz.<br></br>
+                        &nbsp; Bu sayede hastalar uzaklarda ki hastanelere gitmeden tedavilerini veya
+                        ihtiyaçlarını görürken sağlık personelleri de ek iş yapmış olabiliyor.<br></br><br></br>
+                        &nbsp; Sağlık personellerinin ve hastaların tablolarına yukarıda ki menülerden
+                        ulaşabişirsiniz.
                     </p>
                 </div>
 
