personel ekle formunun hazırlanıp tamamlanması ve kodda bazı düzenlemeler

--- a/saglikpersonelitakip/web/personeller.xhtml
+++ b/saglikpersonelitakip/web/personeller.xhtml
@@ -34,6 +34,10 @@
             <div class="col-md-8">
                 <h:dataTable class="table table-striped ml-5 mt-3" value="#{personellerController.pplist}" var="pplist">
                     <h:column>
+                        <f:facet name="header">ID</f:facet>
+                            #{pplist.personel_id}
+                    </h:column>
+                    <h:column>
                         <f:facet name="header">Ad Soyad</f:facet>
                             #{pplist.persone_adsoyad}
                     </h:column>
@@ -49,14 +53,42 @@
                         <f:facet name="header">Telefon</f:facet>
                             #{pplist.personel_telefon}
                     </h:column>
+
                     <h:column>
                         <f:facet name="header">Müsait Saatleri</f:facet>
                         <h:form>
                             <h:commandLink styleClass="btn btn-info btn-sm" action="bossaatler" value="GÖR"/>
                         </h:form>
                     </h:column>
-
+                    <h:column>
+                        <f:facet name="header">Sil</f:facet>
+                        <h:form>
+                            <h:commandLink styleClass="btn btn-danger btn-sm" action="#{personellerController.delete(pplist)}" value="SİL"/>
+                        </h:form>
+                    </h:column>
                 </h:dataTable>
+            </div>
+            <div class="col-md-3 ml-5">
+                <h3 style="color: green; text-align: center; " class="mt-3 mb">Yeni Kayıt Ekle</h3>
+                <h:form>
+                    <div class="row my-3">
+                        <label for="persone_adsoyad">Ad Soyad:</label>
+                        <h:inputText value="#{personellerController.personel.persone_adsoyad}" class="form-control" id="persone_adsoyad" />
+                    </div>  
+                    <div class="row my-3">
+                        <label for="persone_brans">Branş:</label>
+                        <h:inputText value="#{personellerController.personel.personel_brans}" class="form-control" id="persone_brans" />
+                    </div>  
+                    <div class="row my-3">
+                        <label for="persone_cinsiyet">Cinsiyet:</label>
+                        <h:inputText value="#{personellerController.personel.personel_cinsiyet}" class="form-control" id="persone_cinsiyet" />
+                    </div>  
+                    <div class="row my-3">
+                        <label for="persone_telefon">Telefon:</label>
+                        <h:inputText value="#{personellerController.personel.personel_telefon}" class="form-control" id="persone_telefon" />
+                    </div>  
+                    <h:commandButton action="#{personellerController.create}" class="btn btn-success" value="Ekle"/>
+                </h:form>
             </div>
         </div>
     </h:body>
