--- a/saglikpersonelitakip/web/bossaatler.xhtml
+++ b/saglikpersonelitakip/web/bossaatler.xhtml
@@ -32,7 +32,7 @@
         </nav>
         <div class="row">
             <div class="container">
-                <h:dataTable class="table table-striped mt-3" value="#{bossaatController.saatlist}" var="saatlist">
+                <h:dataTable class="table table-dark mt-3" value="#{bossaatController.saatlist}" var="saatlist">
                     <h:column>
                         <f:facet name="header">ID</f:facet>
                             #{saatlist.bossaatler_id}
@@ -65,9 +65,41 @@
                         <f:facet name="header">Pazar</f:facet>
                             #{saatlist.pazar}
                     </h:column>
+                    <h:column>
+                        <f:facet name="header"></f:facet>
+                        <h:form>
+                            <h:commandButton styleClass="btn btn-danger btn-sm" value="SİL"/>
+                        </h:form>
+                    </h:column>
                 </h:dataTable>
             </div>
 
+        </div>
+        <div class="container">
+            <div class="col-md-8">
+                <h:form>
+                    <div class="row">
+                        <div class="col-md-6">
+                            Pazartesi : <h:inputText style="width:200px;" styleClass="form-control" value="#{bossaatController.bossaat.pazartesi}"/>
+                            Salı: <h:inputText style="width:200px;" styleClass="form-control" value="#{bossaatController.bossaat.sali}"/>
+                            Çarşamba: <h:inputText style="width:200px;" styleClass="form-control" value="#{bossaatController.bossaat.carsamba}"/>
+                            Perşembe: <h:inputText style="width:200px;" styleClass="form-control" value="#{bossaatController.bossaat.persembe}"/>
+                            Cuma: <h:inputText style="width:200px;" styleClass="form-control" value="#{bossaatController.bossaat.cuma}"/>
+                            Cumartesi: <h:inputText style="width:200px;" styleClass="form-control" value="#{bossaatController.bossaat.cumartesi}"/>
+                            Pazar: <h:inputText style="width:200px;" styleClass="form-control" value="#{bossaatController.bossaat.pazar}"/>
+
+                        </div>
+                        <div class="col-md-6">
+                            <div class="btn-group" style="margin-left:-150px; margin-bottom: -50px;">
+                                <h:commandButton  value="Ekle" styleClass="btn btn-success"  />
+                                <h:commandButton  value="Güncelle" styleClass="btn btn-info"  />
+
+
+                            </div>
+                        </div>
+                    </div>
+                </h:form>
+            </div>
         </div>
 
     </h:body>
