--- a/saglikpersonelitakip/web/index.xhtml
+++ b/saglikpersonelitakip/web/index.xhtml
@@ -25,6 +25,9 @@
                             <li class="nav-item">
                                 <h:commandLink styleClass="nav-link mr-3" action="personeller" value="Personeller"/>
                             </li>
+                            <li class="nav-item">
+                                <h:commandLink styleClass="nav-link mr-3" action="hastakayit" value="Hastalar"/>
+                            </li>
                         </ul>
                     </h:form>
                 </div>
