--- a/saglikpersonelitakip/web/hastakayit.xhtml
+++ b/saglikpersonelitakip/web/hastakayit.xhtml
@@ -56,7 +56,7 @@
                     <h:column>
                         <f:facet name="header">İhtiyac Saatleri</f:facet>
                         <h:form>
-                            <center><h:commandButton action="#{bossaatController.listele(pplist.personel_id)}" styleClass="btn btn-info btn-sm"  value="GÖR"/></center>
+                            <center><h:commandButton action="#{ihtiyac_saatiController.listele(hklist.hasta_id)}" styleClass="btn btn-info btn-sm"  value="GÖR"/></center>
                         </h:form>
                     </h:column>
                     <h:column>
